# VLXI-Cookiecutter-Python

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  LICENSE-3RD-PARTY  LICENSE.template  Makefile  Makefile.template  NOTICE  README.markdown  README.md  README.md.template  RELEASE-NOTES.md  RELEASE-NOTES.md.template  cookiecutter.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setup.py.template
docs/: Poetry-Quick-Reference.md  pdoc-Quick-Reference.md
example-code/: autoenv.template  env.example  env.template
extras/: env.template  envrc.template
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
spikes/: CI.yml
template-docs/: LICENSE-Python-Template  README-Python-Template.md  RELEASE-NOTES-Python-Template.md
template-docs/extras/: envrc.template  pkg__init__.py.template
{{cookiecutter.__project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.__project_name}}/.github/workflows/: CI.yml  gh-pages.yml
{{cookiecutter.__project_name}}/extras/: dot-envrc
{{cookiecutter.__project_name}}/extras/references/: Project-Environment.md
{{cookiecutter.project_directory}}/: .pre-commit-config.yaml  Makefile  pyproject.toml  setup.py
{{cookiecutter.project_directory}}/.github/workflows/: CI.yml
{{cookiecutter.project_directory}}/docs/references/: pdoc-Quick-Reference.md
{{cookiecutter.project_name}}/: Makefile  README.md  RELEASE-NOTES.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: CI.yml
{{cookiecutter.project_name}}/extras/: dot-envrc
