[tool.poetry]
name = "Velexi Python Project Cookiecutter"
version = "0.6.8"
description = "Template for Python projects"
license = "Apache-2.0"
authors = ["Kevin Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2"
pre-commit = "^3"
black = "^24"
flake8 = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
